docs/_static/style.css
/* ... */
footer a {
  text-decoration: underline;
  color: var(--footer-link);
}

/* sidebar stuff */

main {
  margin-left: 385px;
  padding: 12px;
  z-index: 1;
}

aside {
  font-size: 14px;
  line-height: 1.75em;
  position: fixed;
  /* top: 0; Intentionally missing to give space for sticky header */
  background-color: var(--nav-background);
  color: var(--nav-text);
  left: 0;
  padding: 12px;
  overflow: auto;
  z-index: 3;
  max-height: 100vh;
  width: 385px;
  overscroll-behavior: contain;
}

.small-toc aside {
  display: none;
}

.small-toc main {
  margin-left: 0;
}

header .header-breakpoint {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  padding: 6px;
}

header .extension-breakpoint {
  flex-grow: 1;
  justify-content: flex-end;
}

header form.search {
  padding-right: 6px;
}

.main-heading {
  line-height: 0; /* avoid layout issue */
}

.main-heading img.small {
  display: none;
}

.extension-nav {
  text-transform: capitalize;
}

#hamburger-toggle {
  display: none;
}

.mobile {
  display: none !important;
}

.mobile-heading {
  display: none !important;
}

@media screen and (max-width: 800px) {
  main {
    margin-left: 0;
  }

  .desktop {
    display: none !important;
  }

  .mobile-heading {
    display: flex !important;
    background-color: var(--sub-header-background);
    width: 100%;
    height: 50px;
    align-items: center;
    padding: 0 0.5em;
  }

  .disnake-mobile-logo {
    max-height: 24px;
    margin: 0 0.5em;
  }

  #sidebar {
    height: auto !important;
    padding: 12px;
  }

  header nav {
    justify-content: center;
    align-items: center;
  }

  header.top-header {
    position: relative;
  }

  .main-heading {
    display: block;
    flex-basis: 100%;
    text-align: center;
    width: 100%;
    background-image: linear-gradient(to right, #ffd545 0%, #ffd545 50%, #3773a5 50%, #3773a5 100%);
  }

  .disnake-main-logo {
    display: none;
  }

  .main-heading img.small {
    display: inline-block;
    max-height: 50px;
  }

  header .header-breakpoint {
    flex-basis: 100%;
  }

  .top-header .header-breakpoint {
    padding: 10px;
    padding-left: 42px;
  }

  header .search-breakpoint {
    padding-left: 42px;
  }

  header .search-breakpoint > *  {
    margin: 0 0.5em;
  }

  header .extension-nav {
    padding: 6px 10px;
    flex-basis: 50px;
    flex-grow: 1;
    text-align: center;
    text-transform: capitalize;
  }

  header form.search {
    flex-grow: 1;
    max-width: 400px;
    margin-left: auto;
  }

  header .search-wrapper {
    margin: auto;
  }

  #hamburger-toggle {
    position: fixed;
    top: 12px;
    left: 12px;
    display: block;
    z-index: 60;
    color: white;
    transition: left 0.3s, right 0.3s, color 0.3s;
    cursor: pointer;
  }

  /* a nice clickbox for the X */
  #hamburger-toggle::before {
    position: absolute;
    content: " ";
    display: block;
    background: transparent;
    z-index: -1;
    top: -12px;
    left: -36px;
    width: 72px;
    height: 48px;
  }

  #hamburger-toggle.opened {
    left: calc(100vw - 36px);
    color: white;
  }

  aside {
    position: fixed;
    top: 0;
    bottom: 0;
    left: -100vw;
    width: 100vw;
    transition: left 0.3s, visibility 0.3s;
    max-width: 100%;
    max-height: unset;
    padding: 0;
    visibility: hidden;
    overflow: auto;
    z-index: 50;
  }

  .small-toc aside {
    bottom: auto;
  }

  aside.sidebar-toggle {
    visibility: visible;
    left: 0;
  }

  .sidebar-extension-list {
    background: var(--sub-header-background);
    display: flex !important;
    justify-content: space-around;
    height: auto;
  }

  #sidebar > h3:first-child {
    margin-top: 0;
  }

  .search-wrapper > input[type=search] {
    width: 130px; /* Minimum width, low for small screens */
  }
}


@media screen and (min-width: 1500px) {
  .main {
    max-width: 1500px;
    margin: auto;
  }

  aside {
    left: calc(calc(100vw - 1500px) / 2);
  }

}

#scrollbar {
  height: auto !important;
  overflow: scroll;
}

aside h3 {
  color: var(--mobile-nav-header-text);
  font-size: 24px;
  font-weight: normal;
}

.sidebar-extension-list a {
  margin: 0.25em 0.5em;
  padding: 0.5em;
  color: var(--nav-link-text);
  font-size: 16px;
}

.sidebar-extension-list a:hover {
  color: var(--nav-link-hover-text);
}

.collapsible-arrow {
  font-size: 1.5em!important;
  left: -1.166em;
  top: 0.25em;
  user-select: none;
  position: relative;
  line-height: 0.5em;
  transition: transform 0.4s;
  transform: rotate(-90deg);
}

.expanded {
  transition: transform 0.4s;
  transform: rotate(0deg);
}

.ref-internal-padding {
  position: relative;
  left: -20px;
}

aside .material-icons {
  cursor: pointer;
  font-size: 2em;
}

.material-icons {
  max-width: 24px;
}

.sidebar-toggle {
  display: unset !important;
}

#sidebar a {
  color: var(--nav-text);
}

#sidebar a:hover {
  color: var(--nav-hover-text);
}

#sidebar h3 {
  font-size: 24px;
  margin: 1em 1em 0 0;
}

#sidebar ul {
  list-style: none;
  padding: 0;
}

#sidebar > ul {
  margin-left: 2px;
}

#sidebar ul ul {
  list-style: square;
  margin: 0em;
  margin-left: 1.5em;
}

#sidebar li.no-list-style {
  list-style: none;
}

#sidebar form {
  margin: 1em 0;
  display: flex;
  align-items: baseline;
}

aside::-webkit-scrollbar {
  width: 0.5em;
}

aside::-webkit-scrollbar-thumb {
  background-color: var(--scrollbar);
  border-radius: 0.25em;
}

aside::-webkit-scrollbar-thumb:hover {
  background-color: var(--scrollbar-hover);
}

/* search button stuff */

.search-wrapper {
  display: flex;
  align-items: stretch;
}

.search-wrapper > input[type=search] {
  font-family: "Roboto", Corbel, Avenir, "Lucida Grande", "Lucida Sans", sans-serif;
  outline: none;
  appearance: none;
  font-size: 1em;
}

.search-wrapper > input[type=search],
.search-wrapper > button[type=submit] {
  background-color: var(--sub-header-background);
  border: none;
  color: var(--search-text);
  padding: 0.25em;
  flex: 9;
}
/* ... */

